--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "registration/base.html" %}
+{% extends "index.html" %}
 
 {% block title %}Log in{% endblock %}
 
@@ -10,18 +10,29 @@
 <p class="error">Please correct the errors below:</p>
 {% endif %}
 
-<form method="post" action="?next={{ next|default:"/" }}">
+<form method="post" action="/accounts/login/?next={{ next|default:"/" }}">
+{% csrf_token %}	
 <dl>
 <dt><label for="id_username">Username:</label>{% if form.username.errors %} <span class="error">{{ form.username.errors|join:", " }}</span>{% endif %}</dt>
 <dd>{{ form.username }}</dd>
 <dt><label for="id_password">Password:</label>{% if form.password.errors %} <span class="error">{{ form.password.errors|join:", " }}</span>{% endif %}</dt>
 <dd>{{ form.password }}</dd>
-<dt><input type="submit" value="Log in" /></dt>
+<dt><input type="submit" id="submit-button" value="Log in" /></dt>
 </dl>
 </form>
+
+<script>
+    $("form").submit(function () {
+        alert("hello!");
+        return false;
+    });
+</script>
+
 {% endblock %}
 
 {% block content-related %}
 <p>If you don't have an account, you can <a href="/accounts/register/">sign
 up</a> for one.
 {% endblock %}
+
+
