login modal close and redirect now working

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -21,7 +21,8 @@
 	</head>
 
 	<body>
-	<h1>INDEX</h1>	
+	<h1>INDEX 2</h1>
+	
 	{% if user.is_authenticated %}
 		<p>Hello, {{ user.username }}</p>
 		<a href="/accounts/logout/">LOGOUT</a>
